gke-manifests/backend-service-api-app.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: backend-service-api-app
  labels:
    app: api
  annotations:
    cloud.google.com/backend-config: '{"ports": {
      "api":"http-backend-config-api",
      "websocket":"http-backend-config-websocket"}}'
spec:
  type: NodePort
  selector:
    app: api
  ports:
  - name: api
    port: 3000
    targetPort: 3000
  - name: websocket
    port: 3001
    targetPort: 3001
