gke-manifests/ingress-static-ip.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: markdown-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: markdown-static-ip
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: backend-service-frontend-app
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service-api-app
                port:
                  number: 3000
          - path: /socket.io
            pathType: Prefix
            backend:
              service:
                name: backend-service-api-app
                port:
                  number: 3001
